samples/_failures_safe/1761293896_56eb9a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ce0ef6d.c: In function ‘lexer_next_token’:
./samples/SAFE/__tmp_7ce0ef6d.c:147:5: error: expected declaration or statement at end of input
  147 |     } else {
      |     ^
./samples/SAFE/__tmp_7ce0ef6d.c:147:5: error: expected declaration or statement at end of input
